fix: 不要なusernameとpoll id を削除
