# server/internal/handlers/reaction.go
@@ -4,20 +4,13 @@ import "errors"
 
 type reactionWebSocketMessage struct {
 	Type     string `json:"type"`
-	PollID   string `json:"poll_id"`
-	Username string `json:"username"`
+	Username string `json:"username,omitempty"`
 	Reaction string `json:"reaction"`
 }
 
 func (m reactionWebSocketMessage) validate() error {
 	if m.Type != websocketMessageTypeReaction {
 		return errors.New("type must be reaction")
-	}
-	if m.PollID == "" {
-		return errors.New("poll_id is required")
-	}
-	if m.Username == "" {
-		return errors.New("username is required")
 	}
 	if m.Reaction == "" {
 		return errors.New("reaction is required")
